correction small screen

--- a/style.css
+++ b/style.css
@@ -255,6 +255,7 @@ h5 {
   }
   .FormContact {
     padding: 4%;
+    width: 80%;
   }
 
   h1 {
